[tool.poetry]
name = "youtube-playlist-extractor"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_playlist_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^15.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
